--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@splinetool/react-spline": "^2.1.0",
+    "@splinetool/runtime": "^0.9.37",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.7.0",
     "framer-motion": "^6.2.9",
+    "openai-api": "^1.3.1",
     "react": "^18.0.0",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-type-animation": "^1.1.3",
+    "uuid": "^8.3.2",
+    "vanta": "^0.5.22",
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
     "start": "react-scripts start",
